overflow issue solved Projects title

--- a/style.css
+++ b/style.css
@@ -554,7 +554,7 @@ textarea {
 
   .main-head-desktop {
     display: block;
-    height: 10rem;
+    height: auto;
     width: 100%;
     padding: 3.8rem 53.6rem;
     box-shadow: 0 0.5px 0 0 #dddfe6;
@@ -563,7 +563,6 @@ textarea {
   .main-head-desktop nav {
     padding: 1rem 0;
     width: 36.9rem;
-    height: 2.4rem;
     display: block;
   }
 
@@ -574,7 +573,7 @@ textarea {
   .main-head-desktop a {
     text-decoration: none;
     font-family: "Poppins", sans-serif;
-    font-size: 1.6rem;
+    font-size: 2rem;
     font-weight: 400;
     line-height: 2.4rem;
     text-align: right;
@@ -677,6 +676,7 @@ textarea {
     background: url("./img/image_dots.svg");
     width: 16rem;
     height: 16rem;
+    margin-top: 0.3rem;
   }
 
   .content-1 {
